# ChessEngine

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  rand.txt
source/: ChessEngine.cpp
src/: 0practice  0practice.cpp  ChessEngine.cpp  bits.h  common.h  constants.h  error.h  fen.h  file_structure.txt  main  main.cpp  random.h  types.h  uci.h
